test/fixtures/stmd/bad.txt
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1406

.
<DIV CLASS="foo">

*Markdown*

</DIV>
.
<DIV CLASS="foo">
<p><em>Markdown</em></p>
</DIV>
.

error:

<p><DIV CLASS="foo"></p>
<p><em>Markdown</em></p>
<p></DIV></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1652

.
[foo]: /url "title"

[foo]
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo]: /url &quot;title&quot;</p>
<p>[foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1660

.
   [foo]: 
      /url  
           'the title'  

[foo]
.
<p><a href="/url" title="the title">foo</a></p>
.

error:

<p>[foo]:
/url<br />
'the title'</p>
<p>[foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1670

.
[Foo*bar\]]:my_(url) 'title (with parens)'

[Foo*bar\]]
.
<p><a href="my_(url)" title="title (with parens)">Foo*bar]</a></p>
.

error:

<p>[Foo*bar]]:my_(url) 'title (with parens)'</p>
<p>[Foo*bar]]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1678

.
[Foo bar]:
<my url>
'title'

[Foo bar]
.
<p><a href="my url" title="title">Foo bar</a></p>
.

error:

<p>[Foo bar]:
<my url>
'title'</p>
<p>[Foo bar]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1690

.
[foo]:
/url

[foo]
.
<p><a href="/url">foo</a></p>
.

error:

<p>[foo]:
/url</p>
<p>[foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1712

.
[foo]

[foo]: url
.
<p><a href="url">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1723

.
[foo]

[foo]: first
[foo]: second
.
<p><a href="first">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: first
[foo]: second</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1735

.
[FOO]: /url

[Foo]
.
<p><a href="/url">Foo</a></p>
.

error:

<p>[FOO]: /url</p>
<p>[Foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1743

.
[ΑΓΩ]: /φου

[αγω]
.
<p><a href="/φου">αγω</a></p>
.

error:

<p>[ΑΓΩ]: /φου</p>
<p>[αγω]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1754

.
[foo]: /url
.
.

error:

<p>[foo]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1813

.
# [Foo]
[foo]: /url
> bar
.
<h1><a href="/url">Foo</a></h1>
<blockquote>
<p>bar</p>
</blockquote>
.

error:

<h1>[Foo]</h1>
<p>[foo]: /url</p>
<blockquote>
<p>bar</p>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1827

.
[foo]: /foo-url "foo"
[bar]: /bar-url
  "bar"
[baz]: /baz-url

[foo],
[bar],
[baz]
.
<p><a href="/foo-url" title="foo">foo</a>,
<a href="/bar-url" title="bar">bar</a>,
<a href="/baz-url">baz</a></p>
.

error:

<p>[foo]: /foo-url &quot;foo&quot;
[bar]: /bar-url
&quot;bar&quot;
[baz]: /baz-url</p>
<p>[foo],
[bar],
[baz]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1847

.
[foo]

> [foo]: /url
.
<p><a href="/url">foo</a></p>
<blockquote>
</blockquote>
.

error:

<p>[foo]</p>
<blockquote>
<p>[foo]: /url</p>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3430

.
- a
- b

  [ref]: /url
- d
.
<ul>
<li><p>a</p></li>
<li><p>b</p></li>
<li><p>d</p></li>
</ul>
.

error:

<ul>
<li><p>a</p></li>
<li><p>b</p>
<p>[ref]: /url</p></li>
<li><p>d</p></li>
</ul>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3550

.
* foo
  * bar

  baz
.
<ul>
<li><p>foo</p>
<ul>
<li>bar</li>
</ul>
<p>baz</p></li>
</ul>
.

error:

<ul>
<li>foo
<ul>
<li>bar</li>
</ul>
baz</li>
</ul>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3710

.
[foo]

[foo]: /bar\* "ti\*tle"
.
<p><a href="/bar*" title="ti*tle">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: /bar* &quot;ti*tle&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3803

.
[foo]

[foo]: /f&ouml;&ouml; "f&ouml;&ouml;"
.
<p><a href="/f&ouml;&ouml;" title="f&ouml;&ouml;">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: /f&ouml;&ouml; &quot;f&ouml;&ouml;&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4325

.
*here is a \**
.
<p><em>here is a *</em></p>
.

error:

<p>*here is a **</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4879

.
[link](   /uri
  "title"  )
.
<p><a href="/uri" title="title">link</a></p>
.

error:

<p>[link](   /uri
&quot;title&quot;  )</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4927

.
[foo][bar]

[bar]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo][bar]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4937

.
[*foo\!*][bar]

[bar]: /url "title"
.
<p><a href="/url" title="title"><em>foo!</em></a></p>
.

error:

<p>[<em>foo!</em>][bar]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4947

.
[foo][BaR]

[bar]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo][BaR]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4957

.
[Толпой][Толпой] is a Russian word.

[ТОЛПОЙ]: /url
.
<p><a href="/url">Толпой</a> is a Russian word.</p>
.

error:

<p>[Толпой][Толпой] is a Russian word.</p>
<p>[ТОЛПОЙ]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4968

.
[Foo
  bar]: /url

[Baz][Foo bar]
.
<p><a href="/url">Baz</a></p>
.

error:

<p>[Foo
bar]: /url</p>
<p>[Baz][Foo bar]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4979

.
[foo] [bar]

[bar]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo] [bar]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4987

.
[foo]
[bar]

[bar]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo]
[bar]</p>
<p>[bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4999

.
[foo]: /url1

[foo]: /url2

[bar][foo]
.
<p><a href="/url1">bar</a></p>
.

error:

<p>[foo]: /url1</p>
<p>[foo]: /url2</p>
<p>[bar][foo]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5013

.
[bar][foo\!]

[foo!]: /url
.
<p>[bar][foo!]</p>
.

error:

<p>[bar][foo!]</p>
<p>[foo!]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5030

.
[foo][]

[foo]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo][]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5038

.
[*foo* bar][]

[*foo* bar]: /url "title"
.
<p><a href="/url" title="title"><em>foo</em> bar</a></p>
.

error:

<p>[<em>foo</em> bar][]</p>
<p>[<em>foo</em> bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5048

.
[Foo][]

[foo]: /url "title"
.
<p><a href="/url" title="title">Foo</a></p>
.

error:

<p>[Foo][]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5060

.
[foo] 
[]

[foo]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo]
[]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5079

.
[foo]

[foo]: /url "title"
.
<p><a href="/url" title="title">foo</a></p>
.

error:

<p>[foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5087

.
[*foo* bar]

[*foo* bar]: /url "title"
.
<p><a href="/url" title="title"><em>foo</em> bar</a></p>
.

error:

<p>[<em>foo</em> bar]</p>
<p>[<em>foo</em> bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5095

.
[[*foo* bar]]

[*foo* bar]: /url "title"
.
<p>[<a href="/url" title="title"><em>foo</em> bar</a>]</p>
.

error:

<p>[[<em>foo</em> bar]]</p>
<p>[<em>foo</em> bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5105

.
[Foo]

[foo]: /url "title"
.
<p><a href="/url" title="title">Foo</a></p>
.

error:

<p>[Foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5116

.
\[foo]

[foo]: /url "title"
.
<p>[foo]</p>
.

error:

<p>[foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5127

.
[foo*]: /url

*[foo*]
.
<p>*<a href="/url">foo*</a></p>
.

error:

<p>[foo*]: /url</p>
<p><em>[foo</em>]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5138

.
[foo`]: /url

[foo`]`
.
<p>[foo<code>]</code></p>
.

error:

<p>[foo`]: /url</p>
<p>[foo<code>]</code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5148

.
[[[foo]]]

[[[foo]]]: /url
.
<p><a href="/url">[[foo]]</a></p>
.

error:

<p>[[[foo]]]</p>
<p>[[[foo]]]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5156

.
[[[foo]]]

[[[foo]]]: /url1
[foo]: /url2
.
<p><a href="/url1">[[foo]]</a></p>
.

error:

<p>[[[foo]]]</p>
<p>[[[foo]]]: /url1
[foo]: /url2</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5167

.
[\[foo]

[\[foo]: /url
.
<p><a href="/url">[foo</a></p>
.

error:

<p>[[foo]</p>
<p>[[foo]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5177

.
[foo][bar]

[foo]: /url1
[bar]: /url2
.
<p><a href="/url2">foo</a></p>
.

error:

<p>[foo][bar]</p>
<p>[foo]: /url1
[bar]: /url2</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5189

.
[foo][bar][baz]

[baz]: /url
.
<p>[foo]<a href="/url">bar</a></p>
.

error:

<p>[foo][bar][baz]</p>
<p>[baz]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5200

.
[foo][bar][baz]

[baz]: /url1
[bar]: /url2
.
<p><a href="/url2">foo</a><a href="/url1">baz</a></p>
.

error:

<p>[foo][bar][baz]</p>
<p>[baz]: /url1
[bar]: /url2</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5212

.
[foo][bar][baz]

[baz]: /url1
[foo]: /url2
.
<p>[foo]<a href="/url1">bar</a></p>
.

error:

<p>[foo][bar][baz]</p>
<p>[baz]: /url1
[foo]: /url2</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5235

.
![foo *bar*]

[foo *bar*]: train.jpg "train & tracks"
.
<p><img src="train.jpg" alt="foo &lt;em&gt;bar&lt;/em&gt;" title="train &amp; tracks" /></p>
.

error:

<p>[foo <em>bar</em>]</p>
<p>[foo <em>bar</em>]: train.jpg &quot;train &amp; tracks&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5243

.
![foo *bar*][]

[foo *bar*]: train.jpg "train & tracks"
.
<p><img src="train.jpg" alt="foo &lt;em&gt;bar&lt;/em&gt;" title="train &amp; tracks" /></p>
.

error:

<p>[foo <em>bar</em>][]</p>
<p>[foo <em>bar</em>]: train.jpg &quot;train &amp; tracks&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5251

.
![foo *bar*][foobar]

[FOOBAR]: train.jpg "train & tracks"
.
<p><img src="train.jpg" alt="foo &lt;em&gt;bar&lt;/em&gt;" title="train &amp; tracks" /></p>
.

error:

<p>[foo <em>bar</em>][foobar]</p>
<p>[FOOBAR]: train.jpg &quot;train &amp; tracks&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5277

.
![](/url)
.
<p><img src="/url" alt="" /></p>
.

error:

<p><img src="/url" /></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5285

.
![foo] [bar]

[bar]: /url
.
<p><img src="/url" alt="foo" /></p>
.

error:

<p>[foo] [bar]</p>
<p>[bar]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5293

.
![foo] [bar]

[BAR]: /url
.
<p><img src="/url" alt="foo" /></p>
.

error:

<p>[foo] [bar]</p>
<p>[BAR]: /url</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5303

.
![foo][]

[foo]: /url "title"
.
<p><img src="/url" alt="foo" title="title" /></p>
.

error:

<p>[foo][]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5311

.
![*foo* bar][]

[*foo* bar]: /url "title"
.
<p><img src="/url" alt="&lt;em&gt;foo&lt;/em&gt; bar" title="title" /></p>
.

error:

<p>[<em>foo</em> bar][]</p>
<p>[<em>foo</em> bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5321

.
![Foo][]

[foo]: /url "title"
.
<p><img src="/url" alt="Foo" title="title" /></p>
.

error:

<p>[Foo][]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5332

.
![foo] 
[]

[foo]: /url "title"
.
<p><img src="/url" alt="foo" title="title" /></p>
.

error:

<p>[foo]
[]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5343

.
![foo]

[foo]: /url "title"
.
<p><img src="/url" alt="foo" title="title" /></p>
.

error:

<p>[foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5351

.
![*foo* bar]

[*foo* bar]: /url "title"
.
<p><img src="/url" alt="&lt;em&gt;foo&lt;/em&gt; bar" title="title" /></p>
.

error:

<p>[<em>foo</em> bar]</p>
<p>[<em>foo</em> bar]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5359

.
![[foo]]

[[foo]]: /url "title"
.
<p><img src="/url" alt="[foo]" title="title" /></p>
.

error:

<p>[[foo]]</p>
<p>[[foo]]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5369

.
![Foo]

[foo]: /url "title"
.
<p><img src="/url" alt="Foo" title="title" /></p>
.

error:

<p>[Foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5380

.
\!\[foo]

[foo]: /url "title"
.
<p>![foo]</p>
.

error:

<p>![foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5391

.
\![foo]

[foo]: /url "title"
.
<p>!<a href="/url" title="title">foo</a></p>
.

error:

<p>![foo]</p>
<p>[foo]: /url &quot;title&quot;</p>


